fix sonarQube rule java:S6204